# AlbumSync

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  REQUIREMENTS.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
scripts/: with-msvc.bat
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_init.sql
src-tauri/src/: error.rs  events.rs  lib.rs  main.rs
src-tauri/src/commands/: device.rs  history.rs  mod.rs  settings.rs  sync.rs  trash.rs
src-tauri/src/config/: credential.rs  mod.rs
src-tauri/src/db/: mod.rs  models.rs  queries.rs
src-tauri/src/ftp/: downloader.rs  mod.rs  walker.rs
src-tauri/src/sync/: diff.rs  mod.rs  progress.rs
src-tauri/src/trash/: gc.rs  mod.rs
src/lib/: api.ts  router.ts
src/pages/: History.tsx  Onboarding.tsx  Settings.tsx  Sync.tsx  Trash.tsx
src/styles/: index.css
