[package]
name = "albumsync"
version = "0.1.0"
description = "AlbumSync — back up Android photo album to Windows over LAN FTP"
authors = ["AlbumSync"]
edition = "2021"
license = "MIT"

[lib]
name = "albumsync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 后续里程碑按需在 commit 中加入：
# suppaftp / sqlx / keyring / tokio / thiserror / tracing /
# tauri-plugin-single-instance / tokio-util
